[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-nova-ai"
version = "0.0.1"
authors = [
  { name="Mattia Vicari", email="vicarius.rd@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Mattia-Vicari/py-nova-ai"
"Bug Tracker" = "https://github.com/Mattia-Vicari/py-nova-ai/issues"